BUG #38192 - Translations missing on the header button labels

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,3 +3,12 @@ en:
     errors:
       messages:
         restrict_dependent_destroy: "Can't delete this record because dependent %{record} exists"
+
+  wulin_master:
+    button:
+      add: Add
+      delete: Delete
+      edit: Edit
+      filter: Filter
+      excel: Excel
+      audit: Audit
