MISC - fix translation missing after delete record failed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,7 +2,8 @@ en:
   activerecord:
     errors:
       messages:
-        restrict_dependent_destroy: "Can't delete this record because dependent %{record} exists"
+        models:
+          restrict_dependent_destroy: "Can't delete this record because dependent %{record} exists"
 
   wulin_master:
     button:
